--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,44 @@ markdown: kramdown
 
 exclude: ['/vendor']
 
+# Menu layout
 nav:
   main:
     - name: Install
-      path: install-basic
+      path: /install-basic/
     - name: Add-Ons
-      path: addons
+      path: /addons/
     - name: Developers
-      path: developers
+      path: /developers/
     - name: Services
-      path: services
+      path: /services/
+  install:
+    - name: Basic Install
+      path: /install-basic/
+    - name: WordPress
+      path: /install-wordpress/
+    - name: Single Sign-On
+      path: /install-single-sign-on/
+    - name: Optimization
+      path: /install-optimize/
+    - name: Security
+      path: /install-security/
+  developers:
+    - name: Translate
+      path: /developers-translate/
+    - name: Themes
+      path: /developers-themes/
+    - name: External
+      path: /developers-external/
+    - name: Functions
+      path: /developers-functions/
+    - name: Plugins
+      path: /developers-plugins/
+    - name: Plugin Tutorial
+      path: /developers-plugins-tutorial/
+    - name: Modules
+      path: /developers-modules/
+    - name: Layers
+      path: /developers-layers/
+    - name: Overrides
+      path: /developers-overrides/
