--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Question2Answer documentation
 url: http://docs.question2answer.org
 baseurl: /
 permalink: pretty
+exclude: [vendor]
 
 # Build settings
 # temporarily use redcarpet (instead of kramdown) so we can use 'startinline' option
