Revert "use standard config"
This reverts commit a6e7aa87a2427275df2a581bd1ffb1ec8725efaf.

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,14 @@ baseurl: /
 permalink: pretty
 exclude: [vendor]
 
+# Build settings
+# temporarily use redcarpet (instead of kramdown) so we can use 'startinline' option
+markdown: redcarpet
+
 kramdown:
   input: GFM
+
+highlighter: rouge
 
 # Menu layout
 nav:
