--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
 - 2.2
 before_install: gem install jekyll html-proofer
-script: bundle exec jekyll build && htmlproof --disable-external --check-html ./_site
+script: bundle exec jekyll build && htmlproofer --disable-external --check-html ./_site
 
 env:
   global:
