Add missing .htaccess FAQ menu item

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,8 @@ nav:
       path: /install/optimize/
     - name: Security
       path: /install/security/
+    - name: .htaccess FAQ
+      path: /install/htaccess/
 
   plugins:
     - name: Overview
