Use CSS Grid for showcase cards

--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,11 @@ nav:
 
   footer:
     - name: Contact devs
-      url: http://www.question2answer.org/feedback.php
+      url: https://www.question2answer.org/feedback.php
     - name: Version history
-      url: https://github.com/q2a/question2answer/releases
+      url: /install/versions/
     - name: License details
-      url: http://www.question2answer.org/license.php
+      url: https://www.question2answer.org/license.php
     - name: Demo sandbox
       url: http://demo.question2answer.org/
 
