Refactored Github Repository dates, finished 2020 design
- Refactored the repository dates function.
Dates are now stored on user devices via localStorage, and are only fetched again if there's a change on the lists size (one more list item added, one less list item removed) , or 90 days / 3 months have passed since last fetched. the amount of days for the next fetch can be changed at the top of the scripts.js file.
- Current visited page now is highlighted.
- Added Breadcrumbs
- Added sidebar navigation for sections of the articles.
- Created a popup for the "Welcome to Docs" text.
- Added scroll to top button.
- Internal links fixes.
- Added Mega Menu for Documentation, to group things into sections.

--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,18 @@ nav:
     - name: Code
       path: /code/external/
       sub: code
+
+  second:
     - name: Contribute
       path: /contribute/
       sub: contribute
     - name: Add-Ons
       path: /addons/
       sub: addons
-
-  second:
+  
+  third:
     - name: Services
       url: /services/
-      class: main-nav-link-separate
     - name: Sites
       url: https://www.question2answer.org/sites.php
     - name: Q&A
@@ -103,12 +104,12 @@ nav:
       path: /contribute/docs/
 
   addons:
-    - name: Translations
-      path: /addons/translations/
     - name: Themes
       path: /addons/themes/
     - name: Plugins
       path: /addons/plugins/
     - name: Clients
       path: /addons/clients/
+    - name: Translations
+      path: /addons/translations/
 
